--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "huggingface-redirect",
+  "name": "hf-oauth-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "OAuth callback server for Hugging Face authentication",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
